feat: update angular to v19
- update dependencies
- fix sass deprecation warnings

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,9 @@
             "style": "kebab-case"
           }
         ],
+        "@angular-eslint/prefer-standalone": [
+          "off"
+        ],
         "semi": [
           "error",
           "always"
