--- a/package.json
+++ b/package.json
@@ -32,17 +32,17 @@
     "node": "22.18.0"
   },
   "dependencies": {
-    "@angular-devkit/architect": "0.1802.20",
-    "@angular/animations": "18.2.13",
-    "@angular/common": "18.2.13",
-    "@angular/compiler": "18.2.13",
-    "@angular/core": "18.2.13",
-    "@angular/forms": "18.2.13",
-    "@angular/localize": "18.2.13",
-    "@angular/platform-browser": "18.2.13",
-    "@angular/platform-browser-dynamic": "18.2.13",
-    "@angular/router": "18.2.13",
-    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
+    "@angular-devkit/architect": "0.1902.19",
+    "@angular/animations": "19.2.15",
+    "@angular/common": "19.2.15",
+    "@angular/compiler": "19.2.15",
+    "@angular/core": "19.2.15",
+    "@angular/forms": "19.2.15",
+    "@angular/localize": "19.2.15",
+    "@angular/platform-browser": "19.2.15",
+    "@angular/platform-browser-dynamic": "19.2.15",
+    "@angular/router": "19.2.15",
+    "@ng-bootstrap/ng-bootstrap": "18.0.0",
     "@ngx-translate/core": "16.0.4",
     "@ngx-translate/http-loader": "8.0.0",
     "@popperjs/core": "2.11.8",
@@ -55,17 +55,17 @@
     "ngx-toastr": "19.1.0",
     "rxjs": "7.8.1",
     "tslib": "2.5.2",
-    "zone.js": "0.14.10"
+    "zone.js": "0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "18.2.20",
-    "@angular-eslint/builder": "^18.0.0",
-    "@angular-eslint/eslint-plugin": "^18.0.0",
-    "@angular-eslint/eslint-plugin-template": "^18.0.0",
-    "@angular-eslint/schematics": "^18.0.0",
-    "@angular-eslint/template-parser": "^18.0.0",
+    "@angular-devkit/build-angular": "19.2.19",
+    "@angular-eslint/builder": "19.8.1",
+    "@angular-eslint/eslint-plugin": "19.8.1",
+    "@angular-eslint/eslint-plugin-template": "19.8.1",
+    "@angular-eslint/schematics": "19.8.1",
+    "@angular-eslint/template-parser": "19.8.1",
     "@angular/cli": "20.1.6",
-    "@angular/compiler-cli": "18.2.13",
+    "@angular/compiler-cli": "19.2.15",
     "@angular/language-service": "20.1.7",
     "@cyclonedx/cyclonedx-npm": "1.16.1",
     "@cypress/schematic": "2.5.1",
@@ -73,18 +73,17 @@
     "@types/dompurify": "3.0.5",
     "@types/jest": "29.5.12",
     "@types/node": "24.0.4",
-    "@typescript-eslint/eslint-plugin": "6.20.0",
-    "@typescript-eslint/experimental-utils": "5.62.0",
-    "@typescript-eslint/parser": "6.20.0",
+    "@typescript-eslint/eslint-plugin": "8.47.0",
+    "@typescript-eslint/parser": "8.47.0",
     "btoa": "1.2.1",
     "clipboardy": "5.0.0",
-    "concurrently": "^9.2.0",
+    "concurrently": "9.2.0",
     "cors": "2.7.2",
     "cypress": "15.0.0",
     "dayjs": "1.11.19",
-    "eslint": "8.57.0",
+    "eslint": "9.39.1",
     "eslint-plugin-import": "2.32.0",
-    "eslint-plugin-jsdoc": "50.2.2",
+    "eslint-plugin-jsdoc": "61.3.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "express": "5.1.0",
     "http-server": "14.1.1",
@@ -93,7 +92,10 @@
     "ngx-translate-testing": "7.0.0",
     "nodemon": "3.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.5.4",
+    "typescript": "5.8.3",
     "uuid": "8.3.2"
+  },
+  "overrides": {
+    "beasties": "0.3.3"
   }
 }
