build: set cooldown & default assignee

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    assignees:
+      - "BGruenberg"
+    cooldown:
+      default-days: 7
