--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Commit updated sbom
         if: steps.compare_sbom.outputs.changed == 'true'
         run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
           git add src/sbom.json
           git commit -m "chore: update sbom"
