--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "@cypress/schematic": "4.1.4",
     "@fortawesome/fontawesome-free": "7.1.0",
     "@stylistic/eslint-plugin": "5.6.1",
-    "@types/jest": "29.5.12",
+    "@types/jest": "30.0.0",
     "@types/node": "24.10.1",
     "@typescript-eslint/eslint-plugin": "8.47.0",
     "@typescript-eslint/parser": "8.47.0",
@@ -87,12 +87,13 @@
     "eslint": "9.39.1",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-jest": "29.12.1",
     "eslint-plugin-jsdoc": "61.3.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-prettier": "5.5.4",
     "express": "5.1.0",
     "http-server": "14.1.1",
-    "jest": "29.7.0",
+    "jest": "30.2.0",
     "jest-environment-jsdom": "29.7.0",
     "ngx-translate-testing": "7.0.0",
     "nodemon": "3.1.11",
