--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "moment": "2.30.1",
     "ngx-clipboard": "16.0.0",
     "ngx-toastr": "19.1.0",
-    "rxjs": "7.8.2",
-    "zone.js": "0.16.0"
+    "rxjs": "7.8.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "20.3.14",
