--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "prebuild": "node --env-file=.env/.build.env prebuild.js",
     "prebuild-docker": "node --env-file=.env/.docker.env prebuild.js",
     "generate-sbom": "npx @cyclonedx/cyclonedx-npm --omit dev --omit optional --omit peer --output-file src/sbom.json",
-    "ci-cypress": "(npm run http-server &) && (npx cypress run --env baseHref=http://localhost:4200,apiUrl=http://localhost:4200,customerId=22222222-2222-2222-2222-222222222222)",
-    "ci-cypress-concurrently": "concurrently \"npm run http-server\" \"npx cypress run --env baseHref=http://localhost:4200,apiUrl=http://localhost:4200,customerId=22222222-2222-2222-2222-222222222222\"",
+    "ci-cypress": "(npm run http-server &) && (npx cypress run --expose baseHref=http://localhost:4200,apiUrl=http://localhost:4200,customerId=22222222-2222-2222-2222-222222222222)",
+    "ci-cypress-concurrently": "concurrently \"npm run http-server\" \"npx cypress run --expose baseHref=http://localhost:4200,apiUrl=http://localhost:4200,customerId=22222222-2222-2222-2222-222222222222\"",
     "http-server": "npx http-server dist/browser -c-1 -s -p 4200",
     "cy-verify": "npx cypress verify",
     "cy-info": "npx cypress info",
     "cy-version": "npx cypress version",
     "cy-cache-list": "npx cypress cache list",
-    "cy-open-local": "npx cypress open --env baseHref=http://localhost:4200,apiUrl=http://localhost:4200,customerId=11111111-1111-1111-1111-111111111111"
+    "cy-open-local": "npx cypress open --expose baseHref=http://localhost:4200,apiUrl=http://localhost:4200,customerId=11111111-1111-1111-1111-111111111111"
   },
   "private": true,
   "engines": {
@@ -80,7 +80,7 @@
     "btoa": "1.2.1",
     "concurrently": "9.2.1",
     "cors": "2.8.6",
-    "cypress": "15.9.0",
+    "cypress": "15.10",
     "dayjs": "1.11.19",
     "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
