--- a/package.json
+++ b/package.json
@@ -102,6 +102,13 @@
     "uuid": "13.0.0"
   },
   "overrides": {
-    "tar": "7.5.8"
+    "tar": "7.5.8",
+    "ajv": "8.18.0",
+    "eslint": {
+      "ajv": "^6.12.4"
+    },
+    "eslintrc": {
+      "ajv": "^6.12.4"
+    }
   }
 }
